# Q4-hackathon-2

./: README.md
Hackthon2/: CLAUDE.md  README.md  pyproject.toml
Hackthon2/history/prompts/1-todo-app/: 1-create-todo-app-spec.spec.prompt.md  2-create-todo-app-plan.plan.prompt.md  3-create-todo-app-tasks.tasks.prompt.md
Hackthon2/history/prompts/constitution/: 1-create-todo-app-constitution.constitution.prompt.md
Hackthon2/history/prompts/general/: 2-git-workflow-commit-constitution.general.prompt.md
Hackthon2/specs/1-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
Hackthon2/specs/1-todo-app/checklists/: requirements.md
Hackthon2/specs/1-todo-app/contracts/: todo-api-contract.md
Hackthon2/src/todo_app/: main.py
Hackthon2/src/todo_app/application/: repositories.py  services.py
Hackthon2/src/todo_app/domain/: exceptions.py  models.py
Hackthon2/src/todo_app/infrastructure/: console.py  storage.py
Hackthon2/tests/: test_integration.py  test_todo_app.py
